  ``None``) caused an inscrutable error to be thrown: ( if not
  ``_must_quote[cachekey].search(s): TypeError: expected string or
  buffer``).  Now URLs and paths generated against graphs that have
  None names in intermediate nodes will replace the None with the
  empty string, and, as a result, the error won't be raised.  Of
  course the URL or path will still be bogus.
 
0.6.9 (2009-02-16)
==================

Bug Fixes
---------

- lru cache was unstable under concurrency (big surprise!) when it
  tried to redelete a key in the cache that had already been deleted.
  Symptom: line 64 in put:del data[oldkey]:KeyError: '/some/path'.
  Now we just ignore the key error if we can't delete the key (it has
  already been deleted).

- Empty location names in model paths when generating a URL using
  ``repoze.bfg.model_url`` based on a model obtained via traversal are
  no longer ignored in the generated URL.  This means that if a
  non-root model object has a ``__name__`` of ``''``, the URL will
  reflect it (e.g. ``model_url`` will generate ``http://foo/bar//baz``
  if an object with the ``__name__`` of ``''`` is a child of bar and
  the parent of baz).  URLs generated with empty path segments are,
  however, still irresolveable by the model graph traverser on request
  ingress (the traverser strips empty path segment names).

Features
--------

- Microspeedups of ``repoze.bfg.traversal.model_path``,
  ``repoze.bfg.traversal.model_path_tuple``,
  ``repoze.bfg.traversal.quote_path_segment``, and
  ``repoze.bfg.url.urlencode``.

- add zip_safe = false to setup.cfg.

Documentation
-------------

- Add a note to the ``repoze.bfg.traversal.quote_path_segment`` API
  docs about caching of computed values.

Implementation Changes
----------------------

- Simplification of
  ``repoze.bfg.traversal.TraversalContextURL.__call__`` (it now uses
  ``repoze.bfg.traversal.model_path`` instead of rolling its own
  path-generation).

0.6.8 (2009-02-05)
==================
